--- a/css/styles.css
+++ b/css/styles.css
@@ -89,6 +89,8 @@ ul {
 
 .site-nav a:hover,
 .site-nav a:focus {
+  border-bottom: 4px solid #2196f3;
+  border-radius: 2px;
   color: #2196f3;
 }
 
