--- a/css/styles.css
+++ b/css/styles.css
@@ -37,6 +37,7 @@ ul {
   align-items: center;
 
   max-width: 1600px;
+  width: 100%;
   margin: 0 auto;
 }
 
@@ -148,7 +149,7 @@ ul {
   justify-content: center;
   align-items: center;
 
-  width: 1600px;
+  width: 100%;
   height: 600px;
 
   background-image: linear-gradient(
@@ -342,6 +343,8 @@ h4 {
 /* Наша команда */
 
 .team {
+  width: 100%;
+
   margin-top: 94px;
   background: #f5f4fa;
 }
@@ -351,7 +354,7 @@ h4 {
   flex-direction: row;
   justify-content: center;
 
-  padding: 0 215px;
+  padding: 0;
 }
 
 .team-card {
