--- a/css/styles.css
+++ b/css/styles.css
@@ -72,7 +72,9 @@ ul {
   padding: 32px 0;
 }
 
-.site-nav a {
+.site-nav-link {
+  position: relative;
+
   font-family: Roboto;
   font-style: normal;
   font-weight: 500;
@@ -81,27 +83,63 @@ ul {
   letter-spacing: 0.02em;
   color: inherit;
 
-  padding-bottom: 32px;
+  transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.site-nav-list {
+  display: flex;
+  justify-content: center;
 }
 
 .site-nav-list:first-child {
   margin-left: 85px;
 }
 
-.site-nav a:hover,
-.site-nav a:focus {
-  border-bottom: 4px solid #2196f3;
-  border-radius: 2px;
+.site-nav-link {
+  padding-top: 32px;
+  padding-bottom: 32px;
+}
+
+.nav-link {
   color: #2196f3;
 }
 
-.site-nav-list {
-  display: flex;
-  justify-content: center;
-  align-items: center;
+.nav-link::after {
+  content: "";
+
+  position: absolute;
+  left: 0;
+  bottom: 0;
+
+  display: block;
+  width: 100%;
+  height: 4px;
+  background-color: #2196f3;
+  border-radius: 2px;
 }
 
-.site-nav .item:not(:last-child) {
+.site-nav-link:hover::after,
+.site-nav-link:focus::after {
+  content: "";
+
+  position: absolute;
+  left: 0;
+  bottom: 0;
+
+  display: block;
+  width: 100%;
+  height: 4px;
+  background-color: #2196f3;
+  border-radius: 2px;
+  transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.site-nav-link:hover,
+.site-nav-link:focus {
+  color: #2196f3;
+}
+
+.site-nav-item:not(:last-child) {
   margin-right: 50px;
 }
 
@@ -114,6 +152,8 @@ ul {
   letter-spacing: 0.02em;
   color: #757575;
   fill: #757575;
+
+  transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .auth-nav a:hover,
@@ -291,6 +331,7 @@ h4 {
 /* Чем мы занимаемся */
 
 .our-work-list {
+  position: relative;
   display: flex;
   justify-content: center;
 }
@@ -299,21 +340,7 @@ h4 {
   display: flex;
   align-items: flex-end;
 
-  width: 370px;
-  height: 295px;
   margin-top: 50px;
-}
-
-.our-work-item1 {
-  background-image: url(../images/box1.jpg);
-}
-
-.our-work-item2 {
-  background-image: url(../images/box2.jpg);
-}
-
-.our-work-item3 {
-  background-image: url(../images/box3.jpg);
 }
 
 .our-work-item + .our-work-item {
@@ -332,7 +359,8 @@ h4 {
   color: #ffffff;
 }
 
-.work span {
+.our-work-text {
+  position: absolute;
   width: 370px;
   height: 40px;
   padding-top: 30px;
@@ -415,9 +443,12 @@ h4 {
   border-radius: 50%;
 
   fill: #afb1b8;
+
+  transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.social-link:hover {
+.social-link:hover,
+.social-link:focus {
   background-color: #2196f3;
   fill: #fff;
 }
@@ -465,9 +496,12 @@ h4 {
   border-radius: 4px;
 
   fill: #afb1b8;
+
+  transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.clients-link:hover {
+.clients-link:hover,
+.clients-link:focus {
   border: 1px solid #2196f3;
   cursor: pointer;
   fill: #2196f3;
@@ -507,6 +541,8 @@ h4 {
   background: #f5f4fa;
   border-radius: 4px;
   color: #212121;
+
+  transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .page-filter-items + .page-filter-items {
@@ -531,20 +567,36 @@ h4 {
   margin: 0 auto;
 }
 
+.projects {
+  font-family: Roboto;
+  font-style: normal;
+  font-weight: normal;
+  font-size: 16px;
+  line-height: 30px;
+  letter-spacing: 0.03em;
+
+  color: #757575;
+}
+
 .projects-item {
+  position: relative;
+
   width: 371px;
   margin-right: 30px;
   margin-bottom: 30px;
 
   border: 1px solid #eeeeee;
   box-sizing: border-box;
+
+  transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .projects-item:nth-child(3n) {
   margin-right: 0;
 }
 
-.projects-item:hover {
+.projects-item:hover,
+.projects-item:focus {
   box-shadow: 1px 4px 6px rgba(0, 0, 0, 0.16), 0px 4px 4px rgba(0, 0, 0, 0.06),
     0px 1px 1px rgba(0, 0, 0, 0.12);
 }
@@ -557,26 +609,44 @@ h4 {
 }
 
 .projects-container p {
+  margin-bottom: 20px;
   margin-left: 24px;
 }
 
-.projects-text:hover,
-.projects-text:focus {
-  background: rgba(33, 150, 243, 0.9);
-  color: #ffffff;
-}
-
-/* текст контейнера */
-
-.projects p {
+.projects-text {
   font-family: Roboto;
   font-style: normal;
   font-weight: normal;
-  font-size: 16px;
-  line-height: 30px;
+  font-size: 18px;
+  line-height: 28px;
   letter-spacing: 0.03em;
+  color: #ffffff;
+  text-align: left;
+}
 
-  color: #757575;
+.projects-text p {
+  margin-top: 63px;
+  margin-right: 24px;
+  margin-left: 24px;
+}
+
+.projects-text {
+  position: absolute;
+  right: 0;
+  bottom: 0;
+  width: 100%;
+  height: 73%;
+  background-color: rgba(33, 150, 243, 0.9);
+
+  opacity: 0;
+  transform: translateY(100%);
+  transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.projects-item:hover .projects-text,
+.projects-text:focus {
+  transform: translateY(-37%);
+  opacity: 1;
 }
 
 /* 
@@ -642,6 +712,8 @@ footer {
   letter-spacing: 0.03em;
 
   color: rgba(255, 255, 255, 0.6);
+
+  transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .contact-info a:hover,
@@ -677,9 +749,16 @@ footer {
   fill: #fff;
 }
 
-.social-networks-item:hover {
+.social-networks-item {
   border-radius: 50%;
+  transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.social-networks-item:hover,
+.social-networks-item:focus {
   background-color: #2196f3;
+
+  transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
 
   cursor: pointer;
 }
