--- a/css/styles.css
+++ b/css/styles.css
@@ -580,6 +580,7 @@ h4 {
 
 .projects-item {
   position: relative;
+  overflow: hidden;
 
   width: 371px;
   margin-right: 30px;
@@ -712,13 +713,6 @@ footer {
   letter-spacing: 0.03em;
 
   color: rgba(255, 255, 255, 0.6);
-
-  transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
-}
-
-.contact-info a:hover,
-.contact-info a:focus {
-  color: #2196f3;
 }
 
 .social-networks {
