--- a/css/styles.css
+++ b/css/styles.css
@@ -166,8 +166,7 @@ ul {
 .auth-nav {
   display: flex;
   align-items: center;
-  margin-left: auto;
-  margin-right: auto;
+  margin: 0 auto;
 }
 
 .auth-nav-icon {
